--- a/style.css
+++ b/style.css
@@ -12,19 +12,20 @@ Layout
 *********************** */
 
 .container {
+  height: 100vh;
   max-width: 900px;
   width: 80%;
   margin: 0 auto;
   padding-top: 10%;
 }
 
-.container-center {
+/* .container-center {
   min-height: 300px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
 
-}
+} */
 
 button {
   background-color: navy;
