--- a/style.css
+++ b/style.css
@@ -58,16 +58,16 @@ p#quote, p#author {
   padding: .75rem;
 }
 
-@media (min-width: 675px) {
+@media (min-width:768px) {
   button{
-      max-width: 500px;
+      max-width: 700px;
       font-size: 2.5rem;
       line-height: 2em;
       padding: 1.5rem 2rem;
   }
   p#quote, p#author {
-      font-size: 3rem;
-      line-height: 1.1em;
+      font-size: 2rem;
+      line-height: 1rem;
   }
   i {
     font-size: 2rem;
