--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 body {
   background: #f8f8f8;
   font-family: Courgette, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 /* ********************
@@ -13,9 +15,11 @@ Layout
 
 .container {
   max-width: 900px;
-  width: 80%;
-  margin: 0 auto;
-  padding-top: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 button {
