--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@ body {
 Layout
 *********************** */
 
-.container {
+/* .container {
   max-width: 900px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   font-weight: 600;
-}
+} */
 
 button {
   background-color: navy;
