--- a/style.css
+++ b/style.css
@@ -51,9 +51,10 @@ p#quote, p#author {
 @media (min-width:768px) {
   button{
       max-width: 600px;
-      font-size: 1.5rem;
+      font-size: 1.25rem;
+      padding: .5rem 1.25rem;
   }
   p#quote, p#author {
-      font-size: 1.5rem;
+      font-size: 1.25rem;
   }
 }
