--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ Layout
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+/*   justify-content: center; */
   align-items: center;
 }
 
