--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ Layout
   height: 100vh;
   display: flex;
   flex-direction: column;
-/*   justify-content: center; */
-  align-items: center;
+  justify-content: center;
+/*   align-items: center; */
 }
 
 button {
