--- a/style.css
+++ b/style.css
@@ -15,10 +15,7 @@ Layout
 
 .container {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-/*   align-items: center; */
+  margin: 10% auto;
 }
 
 button {
